<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_receive_share" android:title="@string/menu_receive_share" android:orderInCategory="110" android:showAsAction="never" android:icon="@drawable/ic_share_receiver"/>
    <item android:id="@+id/menu_media_downloads" android:title="@string/downloads_title" android:orderInCategory="111" android:showAsAction="never" android:icon="@drawable/ic_menu_downloads"/>
    <item android:id="@+id/menu_manage_feeds" android:title="@string/feed_filter_add_new" android:orderInCategory="112" android:showAsAction="never" android:icon="@drawable/ic_action_add_feed"/>
    <item android:id="@+id/menu_preferences" android:title="@string/menu_preferences" android:orderInCategory="113" android:showAsAction="never" android:icon="@drawable/ic_menu_pref"/>
    <item android:id="@+id/menu_about" android:title="@string/menu_help" android:orderInCategory="114" android:showAsAction="never" android:icon="@drawable/ic_menu_help"/>
    <item android:id="@+id/menu_share_app" android:title="@string/menu_share_app" android:orderInCategory="115" android:showAsAction="never" android:icon="@drawable/ic_share_sharer"/>
</menu>
