<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/info.guardianproject.securereaderinterface"
    android:id="@+id/svRoot"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@drawable/background_news" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llTor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/white_with_bottom_shadow"
            android:orientation="vertical" >

            <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                android:id="@+id/tvText1"
                style="@style/HelpTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/help_tor_title" />

            <TextView
                android:id="@+id/tvText2"
                style="@style/HelpTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_tor_content" />

            <Button
                android:id="@+id/btnConnectTor"
                style="@style/HelpButtonDiscreteStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_menu_tor"
                android:text="@string/help_tor_button"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/white_with_bottom_shadow"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.6"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                android:src="@drawable/img_panic" />

            <LinearLayout
                android:id="@+id/llWipeRightPanel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="#ffffff"
                android:orientation="vertical" >

                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                    android:id="@+id/TextView01"
                    style="@style/HelpTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/help_wipe_title" />

                <TextView
                    android:id="@+id/TextView02"
                    style="@style/HelpTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_wipe_content" />

                <Button
                    android:id="@+id/btnTestPanic"
                    style="@style/HelpButtonDiscreteStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_wipe_button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/white_with_bottom_shadow"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/llShareLeftPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="#ffffff"
                android:orientation="vertical" >

                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                    android:id="@+id/TextView04"
                    style="@style/HelpTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/help_share_title" />

                <TextView
                    android:id="@+id/TextView03"
                    style="@style/HelpTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_share_content" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/img_local_share" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/white_with_bottom_shadow"
            android:orientation="vertical" >

            <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                android:id="@+id/TextView05"
                style="@style/HelpTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/help_data_title" />

            <TextView
                android:id="@+id/TextView06"
                style="@style/HelpTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_data_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAboutGuardian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/white_with_bottom_shadow"
            android:orientation="vertical" >

            <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                android:id="@+id/CustomFontTextView01"
                style="@style/HelpTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/about_guardian_title" />

            <TextView
                android:id="@+id/TextView07"
                style="@style/HelpTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_guardian_content" />
        </LinearLayout>

        <info.guardianproject.securereaderinterface.widgets.GroupView
            android:id="@+id/groupTermsAndLicenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:collapse_layout="@layout/add_feed_closer"
            app:header_layout="@layout/help_group_header_item"
            app:header_text="@string/help_terms_group_title" >

                        <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                            android:id="@+id/tvTermsTitle"
                            style="@style/HelpTitleStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left|center_vertical"
                            android:text="@string/help_terms_title" />

            <TextView
                android:id="@+id/tvTerms"
                style="@style/HelpTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_terms_content" />

        </info.guardianproject.securereaderinterface.widgets.GroupView>

        <Button
            android:id="@+id/btnDone"
            style="@style/HelpButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="50dp"
            android:text="@string/help_show_news" />

    </LinearLayout>

</ScrollView>